# sdkwork-doudizhu

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.json
.sdkwork/: README.md
apis/app-api/game/: doudizhu-app-api.openapi.json
apis/backend-api/game/: doudizhu-backend-api.openapi.json
apps/: README.md
apps/sdkwork-doudizhu-common/: README.md
apps/sdkwork-doudizhu-pc/: README.md  package.json  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-doudizhu-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-doudizhu-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-doudizhu-pc/specs/: dependency.composition.json
apps/sdkwork-doudizhu-pc/src/: App.tsx  main.tsx
configs/: README.md  doudizhu.database.example.toml  sdkwork-api-cloud-gateway.doudizhu.development.toml  sdkwork-api-cloud-gateway.doudizhu.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.split-services.development.env
crates/: README.md
crates/sdkwork-api-doudizhu-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-api-doudizhu-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-doudizhu-assembly/src/: bootstrap.rs  generated.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-api-doudizhu-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-api-doudizhu-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-api-doudizhu-standalone-gateway/tests/: bootstrap.rs  match_web_framework.rs
crates/sdkwork-doudizhu-api-server/: Cargo.toml  build.rs
crates/sdkwork-doudizhu-api-server/src/: bootstrap.rs  main.rs  web_bootstrap.rs
crates/sdkwork-doudizhu-api-server/tests/: bootstrap.rs  match_web_framework.rs
crates/sdkwork-doudizhu-database-host/: Cargo.toml
crates/sdkwork-doudizhu-database-host/src/: lib.rs
crates/sdkwork-doudizhu-gateway-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-doudizhu-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-doudizhu-gateway-assembly/src/: bootstrap.rs  lib.rs
crates/sdkwork-doudizhu-match-repository-sqlx/: Cargo.toml
crates/sdkwork-doudizhu-match-repository-sqlx/src/: kind.rs  memory.rs  sqlx.rs
crates/sdkwork-doudizhu-match-service/: Cargo.toml
crates/sdkwork-doudizhu-service-host/: Cargo.toml
crates/sdkwork-doudizhu-service-host/specs/: README.md  component.spec.json
crates/sdkwork-doudizhu-service-host/src/: lib.rs
crates/sdkwork-doudizhu-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-doudizhu-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-doudizhu-standalone-gateway/tests/: bootstrap.rs  match_web_framework.rs
crates/sdkwork-game-match-repository-sqlx/src/: memory.rs  sqlx.rs
crates/sdkwork-game-match-service/src/: lib.rs
crates/sdkwork-router-health-app-api/: Cargo.toml
crates/sdkwork-router-health-app-api/src/: routes.rs
crates/sdkwork-router-match-app-api/: Cargo.toml
crates/sdkwork-router-match-app-api/src/: paths.rs
crates/sdkwork-router-match-backend-api/: Cargo.toml
crates/sdkwork-router-match-backend-api/src/: paths.rs
crates/sdkwork-routes-doudizhu-app-api/: Cargo.toml
crates/sdkwork-routes-doudizhu-app-api/specs/: component.spec.json
crates/sdkwork-routes-doudizhu-app-api/src/: error.rs  routes.rs
crates/sdkwork-routes-doudizhu-backend-api/: Cargo.toml
crates/sdkwork-routes-doudizhu-backend-api/specs/: component.spec.json
crates/sdkwork-routes-doudizhu-backend-api/src/: routes.rs
crates/sdkwork-routes-health-app-api/: Cargo.toml
crates/sdkwork-routes-health-app-api/src/: routes.rs
crates/sdkwork-routes-match-app-api/: Cargo.toml
crates/sdkwork-routes-match-backend-api/: Cargo.toml
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_doudizhu_baseline.sql
database/ddl/baseline/sqlite/: 0001_doudizhu_baseline.sql
database/drift/: policy.yaml
database/migrations/postgres/: 0001_doudizhu_baseline.up.sql
database/migrations/sqlite/: 0001_doudizhu_baseline.up.sql
deployments/: README.md
deployments/docker/: Dockerfile.doudizhu-api
deployments/templates/: server.env.example
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
etc/: sdkwork-api-cloud-gateway.doudizhu.development.toml  sdkwork-api-cloud-gateway.doudizhu.production.toml
scripts/: README.md  doudizhu-pc-package-naming.test.mjs  doudizhu-workspace-boundary.test.mjs  generate-doudizhu-sdk.mjs  sdkwork-command.mjs
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-router-health-app-api.route-manifest.json  sdkwork-router-match-app-api.route-manifest.json  sdkwork-routes-doudizhu-app-api.route-manifest.json  sdkwork-routes-health-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-router-match-backend-api.route-manifest.json  sdkwork-routes-doudizhu-backend-api.route-manifest.json  sdkwork-routes-match-backend-api.route-manifest.json
sdks/sdkwork-doudizhu-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-doudizhu-app-sdk/sdkwork-doudizhu-app-sdk-typescript/: package.json
sdks/sdkwork-doudizhu-app-sdk/sdkwork-doudizhu-app-sdk-typescript/src/: index.ts
sdks/sdkwork-doudizhu-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-doudizhu-backend-sdk/sdkwork-doudizhu-backend-sdk-typescript/: package.json
sdks/sdkwork-doudizhu-backend-sdk/sdkwork-doudizhu-backend-sdk-typescript/src/: index.ts
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/contract/: database-framework.contract.test.mjs
tools/: README.md  doudizhu_openapi_export.mjs  doudizhu_route_manifest_check.mjs  doudizhu_sdk_generate.mjs  materialize_doudizhu_database_contract.mjs
(+1 files in other folders)
