[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-doudizhu-assembly",
    "crates/sdkwork-api-doudizhu-assembly",
    "crates/sdkwork-api-doudizhu-standalone-gateway",
    "crates/sdkwork-doudizhu-service-host",
    "crates/sdkwork-doudizhu-database-host",
    "crates/sdkwork-doudizhu-match-service",
    "crates/sdkwork-doudizhu-match-repository-sqlx",
    "crates/sdkwork-routes-doudizhu-app-api",
    "crates/sdkwork-routes-doudizhu-backend-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork_api_doudizhu_standalone_gateway = { package = "sdkwork-api-doudizhu-standalone-gateway", path = "crates/sdkwork-api-doudizhu-standalone-gateway" }
sdkwork_api_doudizhu_assembly = { package = "sdkwork-api-doudizhu-assembly", path = "crates/sdkwork-api-doudizhu-assembly" }
sdkwork_doudizhu_service_host = { package = "sdkwork-doudizhu-service-host", path = "crates/sdkwork-doudizhu-service-host" }
sdkwork_doudizhu_database_host = { package = "sdkwork-doudizhu-database-host", path = "crates/sdkwork-doudizhu-database-host" }
sdkwork_doudizhu_match_service = { package = "sdkwork-doudizhu-match-service", path = "crates/sdkwork-doudizhu-match-service" }
sdkwork_doudizhu_match_repository_sqlx = { package = "sdkwork-doudizhu-match-repository-sqlx", path = "crates/sdkwork-doudizhu-match-repository-sqlx" }
sdkwork_routes_doudizhu_app_api = { package = "sdkwork-routes-doudizhu-app-api", path = "crates/sdkwork-routes-doudizhu-app-api" }
sdkwork_routes_doudizhu_backend_api = { package = "sdkwork-routes-doudizhu-backend-api", path = "crates/sdkwork-routes-doudizhu-backend-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
