[package]
name = "sdkwork-api-doudizhu-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-doudizhu application HTTP plane."

[lib]
name = "sdkwork_api_doudizhu_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_doudizhu_service_host.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-routes-match-app-api = { path = "../sdkwork-routes-match-app-api" }
sdkwork-routes-match-backend-api = { path = "../sdkwork-routes-match-backend-api" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
