[package]
name = "sdkwork-doudizhu-database-host"
version.workspace = true
edition.workspace = true
description = "SDKWork Doudizhu database lifecycle bootstrap."

[lib]
name = "sdkwork_doudizhu_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
