[package]
name = "sdkwork-doudizhu-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-doudizhu application HTTP plane."

[lib]
name = "sdkwork_doudizhu_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-doudizhu-standalone-gateway = { path = "../sdkwork-doudizhu-standalone-gateway" }
sdkwork-routes-match-app-api = { path = "../sdkwork-routes-match-app-api" }
sdkwork-routes-match-backend-api = { path = "../sdkwork-routes-match-backend-api" }
