[package]
name = "sdkwork-doudizhu-service-host"
edition.workspace = true
version.workspace = true
license = "Apache-2.0"
description = "In-process Doudizhu service container for gateway assembly."

[dependencies]
sdkwork_doudizhu_database_host.workspace = true
sdkwork_doudizhu_match_repository_sqlx.workspace = true
sdkwork_doudizhu_match_service.workspace = true
