[package]
name = "sdkwork-routes-doudizhu-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork doudizhu match app-api router."

[lib]
name = "sdkwork_routes_doudizhu_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_doudizhu_match_service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
