[package]
name = "sdkwork-routes-doudizhu-backend-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork doudizhu match backend-api router."

[lib]
name = "sdkwork_routes_doudizhu_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork_doudizhu_match_service.workspace = true
sdkwork_routes_doudizhu_app_api.workspace = true
sdkwork-web-axum.workspace = true
